--- a/views/index.ejs
+++ b/views/index.ejs
@@ -15,10 +15,14 @@
 
   <script src="/vendor/jquery-3.0.0.js"></script>
   <script defer src="/scripts/app.js"></script>
+
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Permanent+Marker&display=swap" rel="stylesheet">
 </head>
 
 <body>
-  <h1>Have fun! 🥔</h1>
+  <h1>Welcome to Lotterifics</h1>
 </body>
 
 </html>
