add two buttons

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -23,6 +23,10 @@
 
 <body>
   <h1>Welcome to Lotterifics</h1>
+  <div>
+    <button class="sign-button" type="button">Log-in</button>
+    <button class="sign-button" type="button">Register</button>
+  </div>
 </body>
 
 </html>
