--- a/styles/main.scss
+++ b/styles/main.scss
@@ -15,4 +15,9 @@ body {
     rgba(163, 208, 219, 1) 74%,
     rgba(163, 208, 219, 1) 100%
   );
+
+  h1 {
+    color: rgb(223, 161, 28);
+    font-family: 'Permanent Marker', cursive;
+  }
 }
