remove body class

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -21,7 +21,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Permanent+Marker&display=swap" rel="stylesheet">
 </head>
 
-<body class="container">
+<body>
   <h1>Welcome to Lotterifics</h1>
   <div class="login">
     <form class="form-inline" method="POST" action="/login">
