--- a/views/index.ejs
+++ b/views/index.ejs
@@ -4,9 +4,9 @@
 <head>
   <title>Home Page</title>
 
-  <meta charset="UTF-8" >
-  <meta http-equiv="X-UA-Compatible" content="IE=edge" >
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" >
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <link rel="stylesheet" href="/vendor/normalize-4.1.1.css" />
   <link rel="stylesheet" href="/vendor/border-box.css" />
@@ -22,29 +22,20 @@
 </head>
 
 <body>
-  <h1>Welcome to Lotterifics</h1>
-  <div class="login">
-    <form class="form-inline" method="POST" action="/login">
-      <input
-        class="form-control"
-        type="username"
-        name="username"
-        placeholder="Username"
-        style="width: 300px; margin: 1em"
-      />
-      <input
-        class="form-control"
-        type="password"
-        name="password"
-        placeholder="Password"
-        style="width: 300px; margin: 1em"
-      />
-      <button type="submit" class="btn btn-primary">Login</button>
-  </form>
+  <div class="container">
+    <h1>Welcome to Lotterifics</h1>
+    <div class="login">
+      <form class="form-inline" method="POST" action="/login">
+        <input class="form-control" type="username" name="username" placeholder="Username"/>
+        <input class="form-control" type="password" name="password" placeholder="Password"/>
+        <button type="submit" class="btn btn-primary">Login</button>
+      </form>
+    </div>
+    <p>__________________________________</p>
+    <form class="form-inline" action="/register" method="GET">
+      <button type="submit" class="btn btn-primary">Register</button>
+    </form>
   </div>
-  <form class="form-inline" action="/register" method="GET">
-    <button type="submit" class="btn btn-primary">Register</button>
-  </form>
 </body>
 
 </html>
