--- a/styles/main.scss
+++ b/styles/main.scss
@@ -24,7 +24,7 @@ body {
     background-color: white;
     width: 450px;
     height: 350px;
-    border: 2px solid red;
+    border: 2px solid rgb(0, 132, 255);
     border-radius: 10px;
 
 
@@ -43,7 +43,7 @@ body {
     }
 
     h1 {
-      color: rgb(223, 161, 28);
+      color: rgb(36, 68, 209);
       font-family: 'Permanent Marker', cursive;
     }
   }
