change page title

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-  <title>Home Page</title>
+  <title>Loterrifics</title>
 
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -23,7 +23,7 @@
 
 <body>
   <div class="container">
-    <h1>Welcome to Lotterifics</h1>
+    <h1>Welcome to Loterrifics</h1>
     <div class="login">
       <form class="form-inline" method="POST" action="/login">
         <input class="form-control" type="username" name="username" placeholder="Username"/>
